tests/auto/qml/v4/data/logicalAnd.3.qml
@@ -1,0 +1,8 @@
+import Qt.v4 1.0
+
+Result {
+    property string s: ""
+    property bool flag: true
+
+    result: (s && flag) == ""
+}
