tests/auto/qml/v4/data/logicalAnd.4.qml
@@ -1,0 +1,8 @@
+import Qt.v4 1.0
+
+Result {
+    property string s: "foo"
+    property bool flag: true
+
+    result: (!flag && s) == false
+}
