tests/auto/qml/v4/data/logicalAnd.5.qml
@@ -1,0 +1,7 @@
+import Qt.v4 1.0
+
+Result {
+    property bool flag: true
+
+    result: (null && flag) == null
+}
