tests/auto/qml/v4/data/logicalAnd.6.qml
@@ -1,0 +1,9 @@
+import Qt.v4 1.0
+
+Result {
+    property string s: ""
+    property bool flag: true
+    property string subresult: s && flag
+
+    result: subresult === ""
+}
